--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                     { id: 'u1-7', name: 'Asymptotic Analysis', pdfUrl: '#' },
                     { id: 'u1-8', name: 'Mathematical Preliminaries: Growth Rates', pdfUrl: '#' },
                     { id: 'u1-9', name: 'Recurrence Relations', pdfUrl: '#' },
-                    { id: 'u1-10', name: 'Methods for Solving Recurrences', pdfUrl: '#' }
+                    { id: 'u1-10', name: 'Methods for Solving Recurrences', pdfUrl: 'pdfs/Recurrence Relations using Master Method.pdf' }
                 ]
             },
             {
@@ -1439,4 +1439,5 @@
 
     </script>
 </body>
+
 </html>
