--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
                 topics: [
                     { id: 'u1-1', name: 'Introduction to Algorithms', pdfUrl: '#' },
                     { id: 'u1-2', name: 'Design and Analysis Issues', pdfUrl: '#' },
-                    { id: 'u1-3', name: 'Types of Algorithms', pdfUrl: '#' },
+                    { id: 'u1-3', name: 'Types of Algorithms', pdfUrl: 'pdfs/Types of Algorithms.pdf' },
                     { id: 'u1-4', name: 'Performance Issues', pdfUrl: '#' },
                     { id: 'u1-5', name: 'Time Complexity', pdfUrl: '#' },
                     { id: 'u1-6', name: 'Space Complexity', pdfUrl: '#' },
@@ -1441,3 +1441,4 @@
 </body>
 
 </html>
+
