--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                     { id: 'u1-2', name: 'Design and Analysis Issues', pdfUrl: '#' },
                     { id: 'u1-3', name: 'Types of Algorithms', pdfUrl: 'pdfs/Types of Algorithms.pdf' },
                     { id: 'u1-4', name: 'Performance Issues', pdfUrl: '#' },
-                    { id: 'u1-5', name: 'Time Complexity', pdfUrl: '#' },
+                    { id: 'u1-5', name: 'Time Complexity', pdfUrl: 'pdfs/Time Complexity Note.pdf' },
                     { id: 'u1-6', name: 'Space Complexity', pdfUrl: '#' },
                     { id: 'u1-7', name: 'Asymptotic Analysis', pdfUrl: '#' },
                     { id: 'u1-8', name: 'Mathematical Preliminaries: Growth Rates', pdfUrl: '#' },
@@ -1441,5 +1441,6 @@
 </body>
 
 </html>
+
 
 
