--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
                     { id: 'u1-3', name: 'Types of Algorithms', pdfUrl: 'pdfs/Types of Algorithms.pdf' },
                     { id: 'u1-4', name: 'Performance Issues', pdfUrl: '#' },
                     { id: 'u1-5', name: 'Time Complexity', pdfUrl: 'pdfs/Time Complexity Note.pdf' },
-                    { id: 'u1-6', name: 'Space Complexity', pdfUrl: '#' },
+                    { id: 'u1-6', name: 'Space Complexity', pdfUrl: 'pdfs/Space Complexity.pdf' },
                     { id: 'u1-7', name: 'Asymptotic Analysis', pdfUrl: '#' },
                     { id: 'u1-8', name: 'Mathematical Preliminaries: Growth Rates', pdfUrl: '#' },
                     { id: 'u1-9', name: 'Recurrence Relations', pdfUrl: '#' },
@@ -1441,6 +1441,7 @@
 </body>
 
 </html>
+
 
 
 
