--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
                     { id: 'u1-4', name: 'Performance Issues', pdfUrl: '#' },
                     { id: 'u1-5', name: 'Time Complexity', pdfUrl: 'pdfs/Time Complexity Note.pdf' },
                     { id: 'u1-6', name: 'Space Complexity', pdfUrl: 'pdfs/Space Complexity.pdf' },
-                    { id: 'u1-7', name: 'Asymptotic Analysis', pdfUrl: '#' },
+                    { id: 'u1-7', name: 'Asymptotic Analysis', pdfUrl: 'pdfs/Asymptotic-Analysis.pdf' },
                     { id: 'u1-8', name: 'Mathematical Preliminaries: Growth Rates', pdfUrl: 'pdfs/Functions & Growth Rates.pdf' },
                     { id: 'u1-9', name: 'Recurrence Relations', pdfUrl: '#' },
                     { id: 'u1-10', name: 'Methods for Solving Recurrences', pdfUrl: 'pdfs/Recurrence Relations using Master Method.pdf' }
@@ -1441,6 +1441,7 @@
 </body>
 
 </html>
+
 
 
 
