--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                     { id: 'u2-3', name: 'Insertion Sort', pdfUrl: 'pdfs/Insertion Sort Lecture Notes.pdf' },
                     { id: 'u2-4', name: 'Heap Sort', pdfUrl: '#' },
                     { id: 'u2-5', name: 'Merge Sort', pdfUrl: '#' },
-                    { id: 'u2-6', name: 'Quick Sort', pdfUrl: '#' },
+                    { id: 'u2-6', name: 'Quick Sort', pdfUrl: 'pdfs/Quick Sort Notes.pdf' },
                     { id: 'u2-7', name: 'Radix Sort', pdfUrl: '#' },
                     { id: 'u2-8', name: 'Bucket Sort', pdfUrl: 'pdfs/Bucket Sort Notes.pdf' },
                     { id: 'u2-9', name: 'Linear Search', pdfUrl: '#' },
@@ -1441,6 +1441,7 @@
 </body>
 
 </html>
+
 
 
 
