--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                     { id: 'u2-1', name: 'Selection Sort', pdfUrl: 'pdfs/Selection Sort.pdf' },
                     { id: 'u2-2', name: 'Bubble Sort', pdfUrl: 'pdfs/Lecture Notes - Bubble Sort.pdf' },
                     { id: 'u2-3', name: 'Insertion Sort', pdfUrl: 'pdfs/Insertion Sort Lecture Notes.pdf' },
-                    { id: 'u2-4', name: 'Heap Sort', pdfUrl: '#' },
+                    { id: 'u2-4', name: 'Heap Sort', pdfUrl: 'pdfs/Heap Sort Guide.pdf' },
                     { id: 'u2-5', name: 'Merge Sort', pdfUrl: '#' },
                     { id: 'u2-6', name: 'Quick Sort', pdfUrl: 'pdfs/Quick Sort Notes.pdf' },
                     { id: 'u2-7', name: 'Radix Sort', pdfUrl: '#' },
@@ -1441,6 +1441,7 @@
 </body>
 
 </html>
+
 
 
 
