--- a/index.html
+++ b/index.html
@@ -1014,8 +1014,8 @@
                     { id: 'u2-6', name: 'Quick Sort', pdfUrl: 'pdfs/Quick Sort Notes.pdf' },
                     { id: 'u2-7', name: 'Radix Sort', pdfUrl: '#' },
                     { id: 'u2-8', name: 'Bucket Sort', pdfUrl: 'pdfs/Bucket Sort Notes.pdf' },
-                    { id: 'u2-9', name: 'Linear Search', pdfUrl: '#' },
-                    { id: 'u2-10', name: 'Binary Search', pdfUrl: '#' },
+                    { id: 'u2-9', name: 'Linear Search', pdfUrl: 'pdfs/Linear and Binary Search Guide..pdf' },
+                    { id: 'u2-10', name: 'Binary Search', pdfUrl: 'pdfs/Linear and Binary Search Guide..pdf' },
                     { id: 'u2-11', name: 'Min/Max Search', pdfUrl: '#' }
                 ]
             },
@@ -1441,6 +1441,7 @@
 </body>
 
 </html>
+
 
 
 
