--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
                     { id: 'u3-3', name: 'Dynamic Programming', pdfUrl: '#' },
                     { id: 'u3-4', name: 'Backtracking', pdfUrl: '#' },
                     { id: 'u3-5', name: 'Branch-and-Bound', pdfUrl: '#' },
-                    { id: 'u3-6', name: 'Knapsack Problem', pdfUrl: '#' },
+                    { id: 'u3-6', name: 'Knapsack Problem', pdfUrl: 'pdfs/01 & Fractional.pdf' },
                     { id: 'u3-7', name: 'Optimal Storage on Tapes', pdfUrl: '#' },
                     { id: 'u3-8', name: 'Shortest Path Algorithms', pdfUrl: '#' },
                     { id: 'u3-9', name: 'Minimum Cost Spanning Trees', pdfUrl: '#' },
@@ -1441,6 +1441,7 @@
 </body>
 
 </html>
+
 
 
 
